--- a/prueba.html
+++ b/prueba.html
@@ -64,7 +64,7 @@
                     se vuelven a unir ambas partes con una capa de relleno y se cubre todo ligeramente con la crema 
                     restante del relleno.</li><br>
             </ol>       
-
+            <a href="./index.html">volver</a>
         </form>
 
     </body>
