--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>hola</title>
+<title>Inicio</title>
 </head>
 <body>
-HOLA PRUEBA
-  <a href="./prueba.html">link text</a>
+  <h1>Bienvenidos</h1>
+  <h2>Página de recetas</h2>
+  <ul>
+    <li>
+      Inicio
+    </li>
+    <li>
+        <a href="./prueba.html" style="color=red;">Torta de Chocolate</a>
+    </li>
+  </ul>
 </body>
 </html>
